[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/graphics/elastic-cover.png" type="Texture" id=1]
[ext_resource path="res://Assets/graphics/slingshot-elastic.png" type="Texture" id=2]
[ext_resource path="res://Objects/Slingshot/InputArea.gd" type="Script" id=3]
[ext_resource path="res://Objects/Slingshot/Slingshot.gd" type="Script" id=5]
[ext_resource path="res://Objects/Slingshot/TrajectoryDrawer/TrajectoryDrawer.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/graphics/slingshot.png" type="Texture" id=7]
[ext_resource path="res://Assets/graphics/elastic-pad.png" type="Texture" id=8]

[sub_resource type="GDScript" id=1]
script/source = "extends Sprite


onready var rest_position = get_node(\"../RestPosition\")


func set_rest_position():
	rotation = global_position.angle_to_point(rest_position.global_position)
"

[sub_resource type="CircleShape2D" id=2]
radius = 55.4932

[node name="Slingshot" type="Node2D"]
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true,
"_editor_description_": "Drag Bone2 to stretch the slingshot"
}

[node name="SpriteBack" type="Sprite" parent="."]
position = Vector2( 99, 133 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 7 )
region_enabled = true
region_rect = Rect2( 73, 0, 71, 294 )
__meta__ = {
"_edit_lock_": true
}

[node name="SpriteFront" type="Sprite" parent="."]
position = Vector2( 34, 133 )
scale = Vector2( 0.9, 0.9 )
z_index = 2
texture = ExtResource( 7 )
region_enabled = true
region_rect = Rect2( 0, 0, 74, 294 )
__meta__ = {
"_edit_lock_": true
}

[node name="ElasticBack" type="Sprite" parent="."]
position = Vector2( 112, 39 )
rotation = -0.240171
scale = Vector2( 1.5765, 0.6 )
texture = ExtResource( 2 )
offset = Vector2( -16, 0 )
script = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Tween" type="Tween" parent="ElasticBack"]

[node name="ElasticFront" type="Sprite" parent="."]
position = Vector2( 19, 40 )
rotation = -2.89661
scale = Vector2( 1.41732, 0.6 )
z_index = 1
texture = ExtResource( 2 )
offset = Vector2( -16, 0 )
script = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Tween" type="Tween" parent="ElasticFront"]

[node name="ElasticPad" type="Sprite" parent="."]
position = Vector2( 63, 51 )
rotation = -1.5708
scale = Vector2( 0.5, 0.6 )
z_index = 1
texture = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="ElasticPadTarget" type="Position2D" parent="."]
position = Vector2( 63, 60 )
__meta__ = {
"_gizmo_extents_": 5.4
}

[node name="ElasticCover" type="Sprite" parent="."]
position = Vector2( 111, 39 )
scale = Vector2( 0.679166, 0.679166 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="RestPosition" type="Position2D" parent="."]
position = Vector2( 63, 60 )
__meta__ = {
"_gizmo_extents_": 8.0
}

[node name="InputArea" type="Area2D" parent="."]
visible = false
position = Vector2( 67.5076, 42.6981 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="InputArea"]
shape = SubResource( 2 )

[node name="TrajectoryDrawer" parent="." instance=ExtResource( 6 )]
[connection signal="input_event" from="InputArea" to="InputArea" method="_on_InputArea_input_event"]
[connection signal="slingshot_grabbed" from="InputArea" to="." method="_on_InputArea_slingshot_grabbed"]
[connection signal="slingshot_moved" from="InputArea" to="." method="_on_InputArea_slingshot_moved"]
[connection signal="slingshot_released" from="InputArea" to="." method="_on_InputArea_slingshot_released"]
